@@ -5,6 +5,10 @@
  - (djm) [atomicio.c configure.ac] Disable poll() fallback in atomiciov for
    Tru64. readv doesn't seem to be a comparable object there.
    bz#1386, patch from dtucker@ ok me
+ - (djm) OpenBSD CVS Sync
+   - djm@cvs.openbsd.org 2008/07/04 23:08:25
+     [packet.c]
+     handle EINTR in packet_write_poll()l ok dtucker@
 
 20080704
  - (dtucker) OpenBSD CVS Sync
@@ -4578,4 +4582,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5060 2008/07/04 23:36:58 djm Exp $
+$Id: ChangeLog,v 1.5061 2008/07/04 23:40:56 djm Exp $
